# ccanvas

./: Cargo.toml  README.md
docs/assets/: idea.xcf
src/: lib.rs  main.rs  values.rs
src/structs/: collection.rs  discriminator.rs  error.rs  focus.rs  mod.rs  packet.rs  passes.rs  pool.rs  process.rs  space.rs  storage.rs  subscription.rs  subscriptions.rs
src/structs/component/: discriminator.rs  focus.rs  mod.rs  passes.rs  process.rs  space.rs  subscription.rs
src/structs/data/: collection.rs  mod.rs  packet.rs  storage.rs  unevaluated.rs
src/structs/events/: event.rs  keyevent.rs  listeners.rs  mod.rs  mouseevent.rs
src/structs/requests/: mod.rs  render_request.rs  request.rs  requestcontent.rs
src/structs/responses/: event_serde.rs  mod.rs  response.rs  response_error.rs  response_success.rs  responsecontent.rs
src/term/: enter.rs  exit.rs  mod.rs
src/traits/: component.rs
