[package]
name = "ccanvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libccanvas = { path = "../libccanvas" }
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "macros", "sync", "fs", "process" ]}
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
termion = "2"
async-trait = "0.1"
nix = { version = "0.27", features = [ "signal" ] }
libc = "0.2"
